Added error handling for payload

--- a/composer.json
+++ b/composer.json
@@ -11,12 +11,16 @@
     ],
     "autoload": {
         "psr-4": {
-            "Vdocipher\\": "src/"
+            "Vdocipher\\": "src/Vdocipher"
         }
     },
     "minimum-stability": "dev",
     "prefer-stable" : true,
     "require": {
         "google/protobuf": "^3.25"
+    },
+    "require-dev": {
+        "protobuf-php/protobuf": "^0.1.3",
+        "protobuf-php/protobuf-plugin": "^0.1.3"
     }
 }
