--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "thatcoderagain/vdo",
+    "name": "thatcoderagain/token-creator",
     "description": "This package provides the methods to generate jwt token for video playback",
     "type": "library",
     "license": "MIT",
